# tmp/swagger.yaml
@@ -62,6 +62,12 @@
               ]
             }
           },
+          "401": {
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
+          },
           "422": {
             "description": "Error",
             "schema": {
@@ -176,6 +182,12 @@
             "description": "OK",
             "schema": {
               "type": "object"
+            }
+          },
+          "401": {
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
             }
           },
           "422": {
